--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Fetch Countries</title>
+
+    <link rel="icon" type="image/png" href="./images/favicon.ico" />
   </head>
   <body>
     <input type="text" id="search-box" />
@@ -13,5 +15,3 @@
     <script src="index.js" type="module"></script>
   </body>
 </html>
-
-
