--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="./images/favicon.ico" />
   </head>
   <body>
-    <input type="text" id="search-box" />
+    <input placeholder="Enter country name..." type="text" id="search-box" />
     <ul class="country-list"></ul>
 
     <script src="index.js" type="module"></script>
